<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".ResetPassword" >
    <!-- Login form -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/title_backgroud">

"
                                    <TextView
                                        android:id="@+id/reset_password_title"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerHorizontal="true"
                                        android:layout_centerVertical="true"
                                        android:textColor="@color/title_text_color"
                                        android:text="@string/rest_pwd_title" 
                                        android:textSize="@dimen/title_text_size"/>

                                     <ImageView
                                        android:onClick="onClick"
                                        android:paddingLeft="@dimen/return_padding_left"
                                        android:id="@+id/reset_password_return"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignBottom="@+id/reset_password_title"
                                        android:layout_alignParentLeft="true"
                                        android:src="@drawable/returnbtn" /> 

    </RelativeLayout>
                     <View
                     android:layout_width="fill_parent"
                     android:layout_height="@dimen/title_bottom_line_height"
                     android:background="@color/title_bottom_line_color" />
                     
                     
                     <!-- resetpassword form -->
                     <ScrollView
        android:id="@+id/restpassword_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/reset_password_phonenumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edit_padding"
                   android:background="@drawable/edit_bgcolor"
                android:clickable="false"
                android:hint="@string/input_phonenumber"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="@dimen/edit_text_size" />

         <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                  android:layout_marginTop="@dimen/login_edit_padding">

                <EditText
                    android:id="@+id/restpwd_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
   
                    android:background="@drawable/edit_bgcolor"
                    android:hint="@string/prompt_check_number"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text_size" />
                <Button
                    android:id="@+id/send_checknumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/restpwd_phonenumber"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:background="@drawable/send_trynumber_btn"
                    android:onClick="onClick"
                    android:text="@string/send_checknumber"
                    android:textColor="@color/send_trynumber_color"
                    android:textSize="@dimen/edit_text_size" />
                <Button
                    android:visibility="invisible"
                    android:id="@+id/try_checknumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/restpwd_phonenumber"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:background="@drawable/try_phonenumber"
                    android:onClick="onClick"
                    android:text="@string/try_checknumber"
                    android:textColor="@drawable/text_selector_trynumber"
                    android:textSize="@dimen/edit_text_size" />

            </RelativeLayout>

            <Button
                android:onClick="onClick"
                android:id="@+id/resetpwd_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/login_btn"
                android:text="@string/confirm"
                android:textSize="@dimen/button_text_size"
                android:textColor="@color/white" />

         

        </LinearLayout>
    </ScrollView>
</LinearLayout>
